--- a/index.html
+++ b/index.html
@@ -31,9 +31,17 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#computer-grafic-final-project"><span class="octicon octicon-link"></span></a>Computer Grafic - Final Project</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>In this page are shown three home objects: "Macaone table" of Alessandro Mendini, "Carlton room divider" of Ettore Sottsass and "Coffeepot 9090" of Richard Sapper</p>
+
+<ul>
+  <li><a href="#alessandroMendini">Alessandro Mendini</a></li>
+  <li><a href="#ettore Sottsass">Ettore Sottsass</a></li>
+  <li><a href="#richard Sapper">Richard Sapper</a></li>
+</ul>
+
+
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
