--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
   <li><a href="#richard Sapper">Richard Sapper</a></li>
 </ul>
 
+<h1><a name="alessandroMendini" class="anchor" href="#alessandroMendini"><span class="octicon octicon-link"></span></a>Alessandro Mendini</h1>
+<h3>
+<a name="her-life" class="anchor" href="#her-life"><span class="octicon octicon-link"></span></a>His life</h3>
+
+<p>Alessandro Mendini (born 16 August 1931 in Milan) is an Italian designer and architect. He played an important part in the development of Italian design. He also worked, aside from his artistic career, for Casabella, Modo and Domus magazines.
+His design has been characterized by his strong interest in mixing different cultures and different forms of expression; he creates graphics, furniture, interiors, paintings and architectures and wrote several articles and books; he is also renowned as an enthusiastic member of jury in architectural competition for young designers. He also teaches at the University of Milan.
+
+In the seventies he was one of the main personalities of the Radical design movement. In 1979 he joined the Studio Alchimia as a partner and here he worked with Ettore Sottsass and Michele De Lucchi. In 1982 he co-founded Domus Academy, the first postgraduate design school.
+As architect, he designed several buildings; for example the Alessi residence in Omegna, Italy; the theater complex "Teatrino della Bicchieraia" in the Tuscan city of Arezzo; the Forum Museum of Omegna, a memorial tower in Hiroshima, Japan; the Groninger Museum in The Netherlands and the Arosa Casino in Switzerland.</p>
 
 
 <pre><code>$ cd your_repo_root/repo_name
