--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@ As architect, he designed several buildings; for example the Alessi residence in
 <h2>Macaone table</h2>
 <p>The Macaone table by Alessandro Mendini is a reinterpretation of the Italian 1950s interior design. Especially the shape of the legs is typical for that period. As a contradiction to the 50s shape, Mendini uses the colours of the 80s which result in a really unique table that with no doubt belongs to the category "eyecatcher".</p>
 
+<p><img src="https://raw.github.com/cvdlab-cg/418196/master/final-project/pop-art-design-table-5220-3747319.jpg" alt="tavolo mendini"></p>
+
 <h3>Table specifications:</h3>
 <ul>
   <li>Table top made of MDF with four-coloured coating</li>
   <li>Legs of durable polyurethane with a coating of lacquered steel in red, blue, yellow and green</li>
   <li>Feet of polished aluminium alloy</li>
   <li>Dimensions H 73 x W 160 x D 140 cm</li>
+  <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/tavolo.js" alt="codice javascript"></a>Read the Javascript Code</li>
 </ul>
 
-<p><img src="https://raw.github.com/cvdlab-cg/418196/master/final-project/pop-art-design-table-5220-3747319.jpg" alt="tavolo mendini"></p>
+
 
 
 
