--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@ As architect, he designed several buildings; for example the Alessi residence in
   <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/tavolo.js" alt="codice javascript"></a>Read the Javascript Code</li>
 </ul>
 
+<h3>Decomposition of model</h3>
+<p>The 3D model of the Macaone table is composed by four colored block. Each block is composed by three parts:
+  <ul>
+    <li><a href="#macaoneTop">Top</a></li>
+    <li><a href="#macaoneLeg">Leg</a></li>
+    <li><a href="#macaoneFeet">Feet</a></li>
+  <ul>
 
+<h4>
+<a name="macaoneTop" class="anchor" href="#macaoneTop"><span class="octicon octicon-link"></span></a>Top</h4>
+<img src="">
+<p></p>
 
 
 
