--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#computer-grafic-final-project"><span class="octicon octicon-link"></span></a>Computer Grafic - Final Project</h3>
+        <h1>
+<a name="welcome-to-github-pages" class="anchor" href="#computer-grafic-final-project"><span class="octicon octicon-link"></span></a>Computer Grafic - Final Project</h1>
 
 <p>In this page are shown three home objects: "Macaone table" of Alessandro Mendini, "Carlton room divider" of Ettore Sottsass and "Coffeepot 9090" of Richard Sapper</p>
 
@@ -41,9 +41,9 @@
   <li><a href="#richard Sapper">Richard Sapper</a></li>
 </ul>
 
-<h1><a name="alessandroMendini" class="anchor" href="#alessandroMendini"><span class="octicon octicon-link"></span></a>Alessandro Mendini</h1>
-<h2>
-<a name="her-life" class="anchor" href="#her-life"><span class="octicon octicon-link"></span></a>His life</h2>
+<h2><a name="alessandroMendini" class="anchor" href="#alessandroMendini"><span class="octicon octicon-link"></span></a>Alessandro Mendini</h2>
+<h3>
+<a name="her-life" class="anchor" href="#her-life"><span class="octicon octicon-link"></span></a>His life</h3>
 
 <p>Alessandro Mendini (born 16 August 1931 in Milan) is an Italian designer and architect. He played an important part in the development of Italian design. He also worked, aside from his artistic career, for Casabella, Modo and Domus magazines.
 His design has been characterized by his strong interest in mixing different cultures and different forms of expression; he creates graphics, furniture, interiors, paintings and architectures and wrote several articles and books; he is also renowned as an enthusiastic member of jury in architectural competition for young designers. He also teaches at the University of Milan.
@@ -51,18 +51,18 @@ His design has been characterized by his strong interest in mixing different cul
 In the seventies he was one of the main personalities of the Radical design movement. In 1979 he joined the Studio Alchimia as a partner and here he worked with Ettore Sottsass and Michele De Lucchi. In 1982 he co-founded Domus Academy, the first postgraduate design school.
 As architect, he designed several buildings; for example the Alessi residence in Omegna, Italy; the theater complex "Teatrino della Bicchieraia" in the Tuscan city of Arezzo; the Forum Museum of Omegna, a memorial tower in Hiroshima, Japan; the Groninger Museum in The Netherlands and the Arosa Casino in Switzerland.</p>
 
-<h2>Macaone table</h2>
+<h3>Macaone table</h3>
 <p>The Macaone table by Alessandro Mendini is a reinterpretation of the Italian 1950s interior design. Especially the shape of the legs is typical for that period. As a contradiction to the 50s shape, Mendini uses the colours of the 80s which result in a really unique table that with no doubt belongs to the category "eyecatcher".</p>
 
 <p><img src="https://raw.github.com/cvdlab-cg/418196/master/final-project/pop-art-design-table-5220-3747319.jpg" alt="tavolo mendini"></p>
 
-<h3>Table specifications:</h3>
+<h4>Table specifications:</h4>
 <ul>
   <li>Table top made of MDF with four-coloured coating</li>
   <li>Legs of durable polyurethane with a coating of lacquered steel in red, blue, yellow and green</li>
   <li>Feet of polished aluminium alloy</li>
   <li>Dimensions H 73 x W 160 x D 140 cm</li>
-  <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/tavolo.js" alt="codice javascript"></a>Read the Javascript Code</li>
+  <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/tavolo.js" alt="codice javascript">Read the Javascript Code</a></li>
 </ul>
 
 <h3>Decomposition of model</h3>
@@ -73,8 +73,8 @@ As architect, he designed several buildings; for example the Alessi residence in
     <li><a href="#macaoneFeet">Feet</a></li>
   <ul>
 
-<h4>
-<a name="macaoneTop" class="anchor" href="#macaoneTop"><span class="octicon octicon-link"></span></a>Top</h4>
+<h5>
+<a name="macaoneTop" class="anchor" href="#macaoneTop"><span class="octicon octicon-link"></span></a>Top</h5>
 <img src="">
 <p></p>
 
