--- a/index.html
+++ b/index.html
@@ -79,9 +79,20 @@ As architect, he designed several buildings; for example the Alessi residence in
 To design this part I utilized BEZIER function with different selector: S0 to create every profile curves and S1 to create every surface.
 </p>
 <img src="https://raw.github.com/leo989/final-project/gh-pages/images/Top.jpg" alt="macaone top">
-<p></p>
 
+<h5>
+<a name="macaoneLeg" class="anchor" href="#macaoneLeg"><span class="octicon octicon-link"></span></a>Leg</h5>
+<p>
+To design this part I utilized NUBS function to create the two upper profile curves and BEZIER function with selector S0 to create the others profile curves.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/Leg.jpg" alt="macaone leg">
 
+<h5>
+<a name="macaoneFeet" class="anchor" href="#macaoneFeet"><span class="octicon octicon-link"></span></a>Feet</h5>
+<p>
+To design this part I utilized BEZIER funtion with S0 selector to create a profile curves, with S1 selector to create the surface and with S2 selector to solidify the part.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/Feet.jpg" alt="macaone leg">
 
 
 
