--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ As architect, he designed several buildings; for example the Alessi residence in
   <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/tavolo.js" alt="codice javascript">Read the Javascript Code</a></li>
 </ul>
 
-<h3>Decomposition of model</h3>
+<h4>Decomposition of model</h4>
 <p>The 3D model of the Macaone table is composed by four colored block. Each block is composed by three parts:
   <ul>
     <li><a href="#macaoneTop">Top</a></li>
@@ -94,8 +94,12 @@ To design this part I utilized BEZIER funtion with S0 selector to create a profi
 </p>
 <img src="https://raw.github.com/leo989/final-project/gh-pages/images/Feet.jpg" alt="macaone leg">
 
+<h4>Renderings gallery</h4>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/macaone1.jpg" alt="macaone">
 
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/macaone2.jpg" alt="macaone">
 
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/macaone3.jpg" alt="macaone">
 
 
 
