--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
 <ul>
   <li><a href="#alessandroMendini">Alessandro Mendini</a></li>
-  <li><a href="#ettore Sottsass">Ettore Sottsass</a></li>
-  <li><a href="#richard Sapper">Richard Sapper</a></li>
+  <li><a href="#ettoreSottsass">Ettore Sottsass</a></li>
+  <li><a href="#richardSapper">Richard Sapper</a></li>
 </ul>
 
 <h2><a name="alessandroMendini" class="anchor" href="#alessandroMendini"><span class="octicon octicon-link"></span></a>Alessandro Mendini</h2>
 <h3>
-<a name="her-life" class="anchor" href="#her-life"><span class="octicon octicon-link"></span></a>His life</h3>
+<a name="his-life" class="anchor" href="#his-life"><span class="octicon octicon-link"></span></a>His life</h3>
 
 <p>Alessandro Mendini (born 16 August 1931 in Milan) is an Italian designer and architect. He played an important part in the development of Italian design. He also worked, aside from his artistic career, for Casabella, Modo and Domus magazines.
 His design has been characterized by his strong interest in mixing different cultures and different forms of expression; he creates graphics, furniture, interiors, paintings and architectures and wrote several articles and books; he is also renowned as an enthusiastic member of jury in architectural competition for young designers. He also teaches at the University of Milan.
@@ -101,9 +101,54 @@ To design this part I utilized BEZIER funtion with S0 selector to create a profi
 
 <img src="https://raw.github.com/leo989/final-project/gh-pages/images/macaone3.jpg" alt="macaone">
 
+<hr>
+
+<h2><a name="ettoreSottsass" class="anchor" href="#ettoreSottsass"><span class="octicon octicon-link"></span></a>Ettore Sottsass</h2>
+<h3>
+<a name="his-life" class="anchor" href="#his-life"><span class="octicon octicon-link"></span></a>His life</h3>
+
+<p>Ettore Sottsass (14 September 1917 – 31 December 2007) was an Italian architect and designer of the late 20th century. His body of designs included furniture, jewelry, glass, lighting and office machine design.
 
 
+Sottsass was born on 14 September 1917 in Innsbruck, Austria, and grew up in Milan, where his father was an architect.
+He was educated at the Politecnico di Torino in Turin and graduated in 1939 with a degree in architecture. He served in the Italian military and spent much of World War II in a concentration camp in Yugoslavia. After returning home in 1947, he set up his own architectural and industrial design studio in Milan.
+In 1959 Sottsass began working as a design consultant for Olivetti, designing office equipment, typewriters and furniture. 
+Throughout the 1960s, Sottsass traveled in the US and India and designed more products for Olivetti culminating in the bright red plastic portable Valentine typewriter in 1969, which became a fashion accessory. 
+While continuing to design for Olivetti in the 1960s, Sottsass developed a range of objects which were expressions of his personal experiences traveling in the United States and India. These objects included large altar-like ceramic sculptures and his "Superboxes"; radical sculptural gestures presented within a context of consumer product, as conceptual statement. Covered in bold and colorful, simulated custom laminates, they were precursors to Memphis, a movement which came more than a decade later.
 
+In 1981, Sottsass and an international group of young architects and designers, came together to form the Memphis Group. Memphis was launched with a collection of 40 pieces of furniture, ceramics, lighting, glass and textiles which featured fluorescent colors, slick surfaces, intentionally lop-sided shapes and squiggly laminate patterns.
+The group's colourful, ironic pieces were hailed as one of the most characteristic examples of Post-modernism in design and the arts. 
+
+Whilst the Memphis movement in the eighties attracted enormous attention around the world for its energy and flamboyance, Ettore Sottsass was simultaneously assembling a major design consultancy which he named Sottsass Associati. The studio was established in 1980 and gave the possibility to build architecture on a substantial scale as well as to design for large international industries.
+Sottsass Associati, primarily an architectural practice, also designed elaborate stores and showrooms for Esprit, identities for Alessi, exhibitions, interiors, consumer electronics in Japan and furniture of all kinds. The studio was based on the cultural guidance of Ettore Sottsass and the work conducted by its many young associates, whom over the years often left to open their own studios. Sottsass Associati are presently based in London and Milan and continue to sustain the work, philosophy and culture of the studio.</p>
+
+<h3>Carlton room divider</h3>
+<p>Carlton room divider, designed in 1981 by Ettore Sottsass, in wood and plastic laminate. The vivid colors and seemingly random interplay of solids and voids suggest avant-garde painting and sculpture. Limited edition numbered and stamped.</p>
+
+<p><img src="https://raw.github.com/leo989/final-project/gh-pages/images/Ettore.jpg" alt="libreria sottsass"></p>
+
+<h4>Carlton specifications:</h4>
+<ul>
+  <li>Materials: wood, laminated plastic</li>
+  <li>Dimensions H 196 x W 190 x D 40 cm</li>
+  <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/mobile.js" alt="codice javascript">Read the Javascript Code</a></li>
+</ul>
+
+<h4>Decomposition of model</h4>
+<p>The 3D model of the Carlton room divider is composed by two component: the principal structure and the others elemnts. Each elment is a single or a group of geometric colored block. 
+
+<h5>Principal structure</h5>
+<p>
+This part is composed by only orizzontal or vertical elemnts. To design this part I utilized CUBOID function to create all element and T function to build the whole structure.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/Principale.jpg" alt="carlton principale">
+
+<h4>Renderings gallery</h4>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/Carlton1.jpg" alt="carlton">
+
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/Carlton2.jpg" alt="carlton">
+
+<hr>
 
 
 
