--- a/index.html
+++ b/index.html
@@ -150,7 +150,65 @@ This part is composed by only orizzontal or vertical elemnts. To design this par
 
 <hr>
 
+<h2><a name="ricchardSapper" class="anchor" href="#ricchardSapper"><span class="octicon octicon-link"></span></a>Richard Sapper</h2>
+<h3>
+<a name="his-life" class="anchor" href="#his-life"><span class="octicon octicon-link"></span></a>His life</h3>
 
+<p>Richard Sapper, born 1932 in Munich, is a German industrial designer based in Milan, Italy. He is considered one of the most important designers of his generation, his products typically featuring a combination of technical innovation, simplicity of form and an element of wit and surprise. He has received numerous international design awards, including 10 prestigious Compasso d'Oro awards and the Raymond Loewy Foundation's Lucky Strike award. 
+
+After beginning as a designer in the styling department at Mercedes-Benz, Sapper relocated to Milan in 1958, where he initially joined the offices of architect Gio Ponti and subsequently the design department of La Rinascente. The pair were hired in 1959 as consultants to Brionvega, an Italian company trying to produce well-designed electronics that would compete with products manufactured in Japan and Germany. 
+Upon starting his own independent studio in 1959, Sapper designed the Static table clock for Lorenz, which won him the first Compasso d'Oro prize and is still in production today. In 1972 Sapper designed the iconic Tizio lamp for Artemide, one of the first desk lamps using halogen bulbs with low-voltage current conducting arms to eliminate the need for wires. The Tizio remains one of the best selling lamps ever produced. In 1978 Alessi commissioned Sapper with the first product in a long series to come, the stove-top espresso maker 9090. It was followed, amongst other products, by the two-note whistling water kettle Bollitore in 1984, the Bandung teapot in 1990, the Coban espresso machine in 1997, the cheese grater Todo in 2006 and the Cintura di Orione cookware series in 1986 and 2009, conceived with the collaboration of renowned chefs such as Roger Verge, Pierre and Michel Troisgros, and Alain Chapel.
+
+Throughout his career, Sapper devoted great attention to transportation issues. He worked with Fiat on experimental cars, especially on pneumatic bumper systems, and with Pirelli on the development of pneumatic structures. In 1972 he formed with architect Gae Aulenti a study group for the development of new urban transportation systems, a theme which he pursued further for an exhibition at the XVI Triennale in Milan in 1979 and which included the design of a bus for Fiat that enabled passengers to stow their bicycles in a rack. His research culminated with the design of the Zoombike (no longer in production), a lightweight bicycle designed with aircraft technology to achieve the required strength and speed acceleration, which can fold as quickly and simply as an umbrella and easily fit into a car trunk.</p>
+
+<h3>Coffeepot 9090</h3>
+<p>Six-cup espresso coffee maker, in 18/10 stainless steel with cast iron handle. The 9090 isn't just the first espresso coffee maker in Alessi's history: it was also Alessi's first object for the kitchen after the 1930s, the first of Alessi's many Compasso d'Oro awards (1979), Alessi's first object to be inducted into the Permanent Design Collection at the New York MOMA, and of course it's the best-loved Alessi coffee maker bar none, as well as Alessi's first "amphibious object", i.e. it is for kitchen use, but with its high design quality it can also be brought directly to the table.</p>
+
+<p><img src="https://raw.github.com/leo989/final-project/gh-pages/images/Coffepot.jpg" alt="Coffee pot 9090"></p>
+
+<h4>Coffeepot specifications:</h4>
+<ul>
+  <li>Capacity 30 cl</li>
+  <li>Dimensions H 20.5 cm</li>
+  <li>Diameter 12.5 cm</li>
+  <li><a href="https://raw.github.com/cvdlab-cg/418196/master/final-project/caffettiera.js" alt="codice javascript">Read the Javascript Code</a></li>
+</ul>
+
+<h4>Decomposition of model</h4>
+<p>The 3D model of the Coffeepot 9090 is composed by three parts:
+  <ul>
+    <li><a href="#9090Base">Base</a></li>
+    <li><a href="#9090Body">Body</a></li>
+    <li><a href="#9090Handle">Handle</a></li>
+  <ul>
+
+<h5>
+<a name="9090Base" class="anchor" href="#9090Base"><span class="octicon octicon-link"></span></a>Base</h5>
+<p>
+To design this part I utilized BEZIER function with S0 selector to generate the profile curve and then I created the whole structure by ROTATION_SURFACE function.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/9090Base.jpg" alt="Base">
+
+<h5>
+<a name="9090Body" class="anchor" href="#9090Body"><span class="octicon octicon-link"></span></a>Body</h5>
+<p>
+To design this part I utilized BEZIER function with S0 selector to generate the profile curve and then I created the whole structure by ROTATION_SURFACE function.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/9090Body.jpg" alt="Body">
+
+<h5>
+<a name="9090Handle" class="anchor" href="#9090Handle"><span class="octicon octicon-link"></span></a>9090Handle</h5>
+<p>
+To design this part I utilized BEZIER funtion with S0 selector to create a profile curves, with S1 selector to create the surface and with S2 selector to solidify the part.
+</p>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/9090Handle.jpg" alt="Handle">
+
+<h4>Renderings gallery</h4>
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/90901.jpg" alt="9090">
+
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/90902.jpg" alt="9090">
+
+<img src="https://raw.github.com/leo989/final-project/gh-pages/images/90903.jpg" alt="9090">
 
 
 
